[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Lorenzo Ravaglia <lorenzo.ravaglia@hope.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
