[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Lorenzo Ravaglia <lorenzo.ravaglia@hope.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
rich-click = "^1.7.4"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
