[project]
name = "traveller-tools"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lorenzo Ravaglia", email = "lorenzo@ravaglia.xyz" }
]
dependencies = [
    "rich-click>=1.7.4",
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tools"]
